i18n // Unify the calling of Widgets among pan-Chinese UIs.

--- a/Packages/PZHelper-Watch/Sources/PZHelper-Watch/Resources/Localizable.xcstrings
+++ b/Packages/PZHelper-Watch/Sources/PZHelper-Watch/Resources/Localizable.xcstrings
@@ -1438,7 +1438,7 @@
         "zh-Hans" : {
           "stringUnit" : {
             "state" : "translated",
-            "value" : "小组件设定"
+            "value" : "小工具设定"
           }
         },
         "zh-Hant" : {
