--- a/Packages/PZHelper/Sources/PZHelper/Resources/Localizable.xcstrings
+++ b/Packages/PZHelper/Sources/PZHelper/Resources/Localizable.xcstrings
@@ -6688,7 +6688,7 @@
         "zh-Hans" : {
           "stringUnit" : {
             "state" : "translated",
-            "value" : "手动将本地账号同步至小组件"
+            "value" : "手动将本地账号同步至小工具"
           }
         },
         "zh-Hant" : {
@@ -10287,7 +10287,7 @@
         "zh-Hans" : {
           "stringUnit" : {
             "state" : "translated",
-            "value" : "本 App 或其随赠的小组件会尝试在针对某个本地账号获取实时便笺资讯时自动重新排定相关的通知。在每次排定时，都会尝试主动清除之前针对该本地账号所排定的任何无效的尚未推送的通知。当且仅当系统设定允许本 App 推送系统通知、且本 App 有成功获取到实时便笺资讯时，才会在相关的偏好设定允许的情况下对相关的通知进行排定。"
+            "value" : "本 App 或其随赠的小工具会尝试在针对某个本地账号获取实时便笺资讯时自动重新排定相关的通知。在每次排定时，都会尝试主动清除之前针对该本地账号所排定的任何无效的尚未推送的通知。当且仅当系统设定允许本 App 推送系统通知、且本 App 有成功获取到实时便笺资讯时，才会在相关的偏好设定允许的情况下对相关的通知进行排定。"
           }
         },
         "zh-Hant" : {
